# amplifier-bundle-tui-tester

./: .gitignore  README.md  bundle.md
agents/: tui-test-analyst.md
behaviors/: tui-tester.yaml
context/: tui-testing-instructions.md
examples/: test-textual-app.md
modules/tool-tui-tester/: README.md  pyproject.toml
modules/tool-tui-tester/amplifier_module_tool_tui_tester/: __init__.py
modules/tool-tui-tester/src/amplifier_module_tool_tui_tester/: __init__.py  keys.py  session_manager.py
