[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-tool-tui-tester"
version = "0.1.0"
description = "Amplifier tool for testing TUI applications with terminal emulation and visual capture"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Diego Colombo" }
]
keywords = ["amplifier", "tui", "terminal", "testing", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyte>=0.8.0",
    "Pillow>=10.0.0",
    # amplifier-core is a peer dependency - provided by the runtime environment
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_module_tool_tui_tester"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
